--- a/index.html
+++ b/index.html
@@ -7,7 +7,39 @@
     <title>GIT</title>
 </head>
 <body>
-    <h1>GitHub</h1>
-    
+    <h1>Trabajo 02 GitHub</h1>
+    <h2>Ejercicio 1: Listas</h2>
+    <!--Pregunta 1-->
+    <h3>1.1- ¿Para qué sirve la etiqueta ul? Dar un ejemplo en donde lo utilizarías.</h3>
+    <p>ul de <strong>"unordered list"</strong> crea una lista no ordenada. Esto quiere decir que no tien ni un orden numerico o alfabeto, lo podria utilizar para una lista nombres.</p>
+    <!--Pregunta 2-->
+    <h3>1.2- ¿Para qué sirve la etiqueta ol? Dar un ejemplo en donde lo utilizarías.</h3>
+    <p>Esta etiqueta sirve para definir listas ordenadas de manera numerica o alfabeta. ol es de <strong>"Ordered List"</strong>.Por ejemplo este lo utilizaria en una lista de ingredientes</p>
+    <!--Pregunta 3-->
+    <h3>1.3- ¿Para qué sirve la etiqueta dl? Dar un ejemplo en donde lo utilizarías.</h3>
+    <p>La etiqueta dl representa una <strong>"Lista descriptiva"</strong>. Es decir que esta elemento encierra un lista de terminos y descripciones, un ejemplo para su uso podria ser de uso personal.</p>
+    <!--Pregunta 4-->
+    <h3>1.4- ¿Para qué sirve la etiqueta li? Dar un ejemplo en donde lo utilizarías.</h3>
+    <p>La etiqueta li del ingles <strong>"Item List</strong>, declara cada uno de los elementos.</p>
+    <!--Pregunta 5-->
+    <h3>1.5- Crea una lista desordenada con tres elementos (li) que contengan nombres de países de América del Sur.</h3>
+    <ul>
+        <li>Brasil</li>
+        <li>Argentina</li>
+        <li>Chile</li>
+    </ul>
+    <!--Pregunta 6-->
+    <h3>1.6- Crea una lista ordenada con cinco elementos (li) que contengan los días de la semana en orden alfabético.</h3>
+    <ol>
+        <li>Lunes</li>
+        <li>Martes</li>
+        <li>Miercoles</li>
+        <li>Jueves</li>
+        <li>Viernes</li>
+        <li>Sabado</li>
+        <li>Domingo</li>
+    </ol>
+
+
 </body>
 </html>
