--- a/materias/resto/prob-ambientales.html
+++ b/materias/resto/prob-ambientales.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Problematicas Ambientales</title>
 </head>
 <body>
-    
+    <h1>PROBLEMATICAS AMBIENTALES</h1>
+    <P>Es un campo académico multidisciplinario que estudia sistemáticamente la interacción humana con el medio ambiente para resolver problemas complejos.</P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
