--- a/materias/talleres/web.html
+++ b/materias/talleres/web.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEB</title>
 </head>
 <body>
-    
+    <h1>WEB</h1>
+    <p>Un taller de desarrollo web es una actividad educativa en la cual los participantes aprenden sobre diferentes aspectos del diseño y la creación de sitios web. Durante un taller de este tipo, se enseñan conceptos fundamentales y prácticas relacionadas con las tecnologías utilizadas en el desarrollo web, como HTML, CSS, JavaScript y posiblemente otros lenguajes o herramientas.</p>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
