--- a/materias/index.html
+++ b/materias/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materia</title>
+    <title>Materias</title>
 </head>
+
 <body>
-    <h1>Materia de 4º1º</h1>
+    <h1>Materias de 4º1º</h1>
     <h2>Mirko Picazo</h2>
 
     <dl>
-        <dt><a href="modalidad/algebra.html"></a></dt>
+        <dt><a href="modalidad/algebra.html">Algebra</a></dt>
+        <dd>Una de las ramas matematicas.</dd>
+
+        <dt><a href="modalidad/ingles-tecnico.html">Ingles Tecnico</a></dt>
+        <dd>Aprendizaje de la lengua inglesa</dd>
+
+        <dt><a href="modalidad/logica.html">Logica</a></dt>
+        <dd>Disciplina que trata de métodos de razonamiento.</dd>
+
+        <dt><a href="modalidad/sist-electricos.html">Sistemas Electronicos</a></dt>
+        <dd>Practicas de circuitos electronicos.</dd>
+
+        <dt><a href="modalidad/Sist-informaticos.html">Sistemas de Informacion</a></dt>
+        <dd>Estudia los sitemas de la empresas</dd>
+
+        <dt><a href="resto/coe.html">Comunicacion Oral y Escrita</a></dt>
+        <dd>Técnicas que se deben seguir para comunicarse oralmente con efectividad.</dd>
+
+        <dt><a href="resto/ed-fisica.html">Ed. Fisica</a></dt>
+        <dd>Educación integral sobre el cuerpo humano contribuyendo al cuidado de la salud.</dd>
+
+        <dt><a href="resto/historia.html">Historia Politica Reciente</a></dt>
+        <dd>Estudia acontecimientos politicos.</dd>
+
+        <dt><a href="resto/prob-ambientales.html">Problematicas Ambientales</a></dt>
+        <dd>Estudia la diversas Problematicas Ambientales</dd>
+
+        <dt><a href="talleres/redes.html">Redes</a></dt>
+        <dd>Taller sobre el aprendizaje en la conectividad de computadoras.</dd>
+
+        <dt><a href="talleres/web.html">WEB</a></dt>
+        <dd>Taller para aprender HTML - CSS - Js</dd>
     </dl>
+    <p><a href="https://www.cet30.edu.ar/home"><img src="../assets/imagenes/logo.png" alt="Cet Nº30"></a></p>
+
+
 </body>
+
 </html>
