--- a/materias/modalidad/Sist-informaticos.html
+++ b/materias/modalidad/Sist-informaticos.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sISTEMAS DE INFORMACION</title>
 </head>
 <body>
-    
+    <h1>SISTEMAS DE INFORMACION</h1>
+    <P>La asignatura Sistemas de Información pretende formar recursos humanos preparados para la introducción de la tecnología de información en su ámbito de trabajo, con capacidad de gestión, incorporando el hábito de apropiarse de las herramientas tecnológicas que van apareciendo.</P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
