--- a/materias/modalidad/algebra.html
+++ b/materias/modalidad/algebra.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>algebra</title>
 </head>
 <body>
+    <h1>ALGEBRA</h1>
+    <p>El álgebra es la rama de la matemática que estudia la combinación de elementos como números, letras y signos para elaborar diferentes operaciones aritméticas elementales.</p>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
     
 </body>
 </html>
