--- a/materias/modalidad/ingles-tecnico.html
+++ b/materias/modalidad/ingles-tecnico.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ingles</title>
 </head>
 <body>
-    
+    <h1>INGLES TECNICO</h1>
+    <P>El inglés técnico es una variante especializada del idioma inglés que se utiliza en contextos profesionales y científicos para describir conceptos y términos específicos relacionados con una determinada área o campo de conocimiento.</P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
