--- a/materias/modalidad/sist-electricos.html
+++ b/materias/modalidad/sist-electricos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logica</title>
+    <title>Sistemas electronicos</title>
 </head>
 <body>
-    <h1>LOGICA</h1>
-    <P>La lógica es la ciencia que estudia la corrección de los razonamientos, tanto formales como no formales, por eso esta asignatura se va a componer de dos partes, una, la lógica formal y otra, la lógica no formal, a veces, también "mal" llamada lógica informal.</P>
+    <h1>SISTEMAS ELECTRONICOS</h1>
+    <P>Es el campo de la ingeniería y la de física aplicada que estudia el diseño de circuitos que permiten generar, modificar o tratar una señal eléctrica, normalmente circuitos de corriente continua.</P>
     <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
