--- a/materias/resto/coe.html
+++ b/materias/resto/coe.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>coe</title>
 </head>
 <body>
-    
+    <h1>COMUNICACION ORAL Y ESCRITA</h1>
+    <P>Entendiendo a la comunicación como un proceso dinámico. Incorporamos conceptos básicos y ejercitamos estrategias y técnicas para hablar y escribir de forma concisa, adquiriendo soltura y solvencia.
+        Experimentamos con la imaginación, la intuición, la curiosidad y la creatividad, en el marco de la formación profesional. Analizamos y producimos textos para indagar en el proceso de escritura.
+    </P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
