--- a/materias/resto/ed-fisica.html
+++ b/materias/resto/ed-fisica.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EDFISICA</title>
 </head>
 <body>
-    
+    <H1>EDUCACION FISICA</H1>
+    <P>La materia de educación física se busca educar a los individuos en el uso de su propio cuerpo, enseñándoles a mantener su salud física y corporal.</P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
