--- a/materias/resto/historia.html
+++ b/materias/resto/historia.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hitorias</title>
 </head>
 <body>
-    
+    <h1>HISTORIA POLITICA RECIENTE</h1>
+    <P>La historia es la ciencia social encargada de estudiar los eventos del pasado de la humanidad a través de distintas metodologías que analizan el contexto social, político, económico, geográfico y psicológico del hombre a través de su entorno.</P>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
 </body>
 </html>
