--- a/materias/talleres/redes.html
+++ b/materias/talleres/redes.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Redes</title>
 </head>
 <body>
-    
+    <h1>REDES</h1>
+    <p>Te prepara para diseñar, planificar, configurar y gestionar todo tipo de redes físicas y lógicas de los sistemas operativos actuales.</p>
+    <p><a href="/materias/index.html"><img width="100px" src="../../assets/imagenes/left.png" alt="Volver"></a></p>
+
 </body>
 </html>
